# Practical.Rust.1.x.Cookbook-code-examples

./: README.md
code/ch01/: Cargo.toml
code/ch01/members/ch1-tests/: Cargo.toml
code/ch05/: Cargo.toml
code/ch05/members/concurrent-hashmap/: Cargo.toml
code/ch05/members/concurrent-hashmap-rayon/: Cargo.toml
code/ch05/members/concurrent-hashmap-rayon/src/: lib.rs  main.rs
code/ch05/members/concurrent-hashmap/src/: lib.rs  main.rs
code/ch05/members/deadlock-example/: Cargo.toml
code/ch05/members/deadlock-example/src/: main.rs
code/ch05/members/livelock-example/: Cargo.toml
code/ch05/members/livelock-example/src/: main.rs
code/ch05/members/parallel_algorithms/algorithm-testing/: Cargo.toml  README.md
code/ch05/members/parallel_algorithms/rayon-sum-of-squares/: Cargo.toml
code/ch05/members/parallel_algorithms/std_thead/: Cargo.toml
code/ch05/members/parallel_algorithms/use_rayon/: Cargo.toml
code/ch05/members/shared-variable-01/: Cargo.toml
code/ch05/members/shared-variable-01/src/: main.rs
code/ch05/members/shared-variable-02/: Cargo.toml
code/ch05/members/shared-variable-03/: Cargo.toml
code/ch05/members/thead-safe-queue-01/: Cargo.toml
code/ch06/: Cargo.toml  output.txt
code/ch06/members/async-io/: Cargo.toml  README.md
code/ch06/members/async-networking-async_std/: Cargo.toml  README.md
code/ch06/members/async-networking-tokio/: Cargo.toml  README.md
code/ch06/members/async-task-integration-futures/: Cargo.toml  README.md
code/ch06/members/async-task-integration-tokio/: Cargo.toml  README.md
code/ch06/members/result-type-01/: Cargo.toml
code/ch06/members/spsp-chanel/: Cargo.toml  README.md
code/ch06/members/woking-with-channels/: Cargo.toml
(+48 files in other folders)
